--- a/index.html
+++ b/index.html
@@ -2,51 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eletronica Labs IT</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Your IT Company</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
-    <img src="assets/logo.png" alt="Company Logo" class="logo">
-    <nav>
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="container">
+      <h1>Your IT Company</h1>
+      <nav>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <section class="hero">
-    <h1>Your All-in-One IT Solutions Partner</h1>
-    <p>Professional networking, telephony, and server deployments.</p>
+    <div class="container">
+      <h2>Reliable IT Solutions for Small Businesses & Homes</h2>
+      <p>We deploy secure networks, VoIP systems, Starlink, servers, and more.</p>
+      <a href="#contact" class="cta-button">Get in Touch</a>
+    </div>
   </section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>🚀 Starlink Dish Setup</li>
-      <li>🌐 UniFi & TP-Link Network Deployments</li>
-      <li>📞 PBX (VoIP & Telephony Systems)</li>
-      <li>🖥️ NAS & Server Installations (Shared Folders, Backups)</li>
-      <li>🎫 Ticketing System Implementation</li>
-      <li>💬 Live Chat Software Integration</li>
-      <li>🌍 Website Design & Hosting</li>
-    </ul>
+  <section id="services" class="section-alt">
+    <div class="container">
+      <h2>What We Do</h2>
+      <div class="grid">
+        <div><h3>Network Deployment</h3><p>UniFi & TP-Link equipment setup.</p></div>
+        <div><h3>Telephony (PBX)</h3><p>Modern VoIP systems with extensions and IVRs.</p></div>
+        <div><h3>Starlink Installation</h3><p>Rural broadband setup with Starlink satellite internet.</p></div>
+        <div><h3>Servers & NAS</h3><p>Shared folders, backups, and centralized storage.</p></div>
+        <div><h3>Ticketing Systems</h3><p>Support workflows with open-source ticketing tools.</p></div>
+        <div><h3>Live Chat & Websites</h3><p>Real-time communication and custom site hosting.</p></div>
+      </div>
+    </div>
   </section>
 
   <section id="about">
-    <h2>About Us</h2>
-    <p>We're a dedicated team helping individuals and businesses with reliable, modern IT solutions. From small office networks to advanced server setups, we provide tailored services with a personal touch.</p>
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>We're a small Portuguese IT company focused on reliable, transparent tech solutions for homes and small businesses. Whether it's setting up secure networks or organizing your entire digital infrastructure, we make IT simple and effective.</p>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-    <p>Phone: +351 XXX XXX XXX</p>
+  <section id="contact" class="section-alt">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:info@yourcompany.com">info@yourcompany.com</a></p>
+      <p>Phone: +351 XXX XXX XXX</p>
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 Your IT Company. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2025 Your IT Company. All rights reserved.</p>
+    </div>
   </footer>
+
 </body>
 </html>
+
