--- a/index.html
+++ b/index.html
@@ -5,63 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Your IT Company</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <header>
-    <div class="container">
-      <h1>Your IT Company</h1>
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
+  <header class="container">
+    <h1>Your IT Company</h1>
+    <nav>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <div style="clear: both;"></div>
   </header>
 
   <section class="hero">
     <div class="container">
-      <h2>Reliable IT Solutions for Small Businesses & Homes</h2>
-      <p>We deploy secure networks, VoIP systems, Starlink, servers, and more.</p>
-      <a href="#contact" class="cta-button">Get in Touch</a>
+      <h2>Reliable Tech for Real Needs</h2>
+      <p>We help homes and businesses get online and stay connected using tools like UniFi, TP-Link, Starlink, and more. Think of us as your all-in-one tech partner.</p>
+      <a href="#contact" class="cta-button">Request a Consultation</a>
     </div>
   </section>
 
   <section id="services" class="section-alt">
     <div class="container">
-      <h2>What We Do</h2>
+      <h2>Our Services</h2>
       <div class="grid">
-        <div><h3>Network Deployment</h3><p>UniFi & TP-Link equipment setup.</p></div>
-        <div><h3>Telephony (PBX)</h3><p>Modern VoIP systems with extensions and IVRs.</p></div>
-        <div><h3>Starlink Installation</h3><p>Rural broadband setup with Starlink satellite internet.</p></div>
-        <div><h3>Servers & NAS</h3><p>Shared folders, backups, and centralized storage.</p></div>
-        <div><h3>Ticketing Systems</h3><p>Support workflows with open-source ticketing tools.</p></div>
-        <div><h3>Live Chat & Websites</h3><p>Real-time communication and custom site hosting.</p></div>
+        <div>
+          <h3>Network Setup</h3>
+          <p>From UniFi mesh Wi-Fi to TP-Link routers, we install and configure fast, secure, and reliable networks for your space. Ideal for both homes and small offices.</p>
+        </div>
+        <div>
+          <h3>PBX Telephony</h3>
+          <p>We install and configure Asterisk- or FreePBX-based phone systems, allowing internal extensions, call forwarding, IVRs, voicemail-to-email, and more.</p>
+        </div>
+        <div>
+          <h3>Starlink Integration</h3>
+          <p>We professionally install Starlink equipment and optimize placement, including custom pole mounts or wall brackets when necessary. Perfect for rural areas.</p>
+        </div>
+        <div>
+          <h3>Servers & NAS</h3>
+          <p>Deploy Proxmox, TrueNAS, or Synology setups to enable backups, shared folders, and local cloud storage. Great for collaborative teams and home labs.</p>
+        </div>
+        <div>
+          <h3>Ticketing Systems</h3>
+          <p>Deploy open-source tools like osTicket or Zammad to manage IT support workflows, prioritize client issues, and keep teams organized.</p>
+        </div>
+        <div>
+          <h3>Live Chat & Websites</h3>
+          <p>We integrate live chat tools like LiveKit or Rocket.Chat into your website and offer simple, effective site hosting using GitHub Pages, WordPress, or static HTML.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="about">
     <div class="container">
-      <h2>Who We Are</h2>
-      <p>We're a small Portuguese IT company focused on reliable, transparent tech solutions for homes and small businesses. Whether it's setting up secure networks or organizing your entire digital infrastructure, we make IT simple and effective.</p>
+      <h2>About Us</h2>
+      <p>We're a small, agile IT company based in Portugal. We specialize in helping people deploy modern networking and digital infrastructure without the overhead of large providers. Our solutions are simple, secure, and built on open standards.</p>
     </div>
   </section>
 
   <section id="contact" class="section-alt">
     <div class="container">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:info@yourcompany.com">info@yourcompany.com</a></p>
-      <p>Phone: +351 XXX XXX XXX</p>
+      <h2>Contact</h2>
+      <p>📧 Email: <a href="mailto:info@yourcompany.com">info@yourcompany.com</a></p>
+      <p>📞 Phone: +351 XXX XXX XXX</p>
+      <p>Want to get started? Just send us an email and tell us what you need—we'll take care of the rest.</p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Your IT Company. All rights reserved.</p>
+      <p>&copy; 2025 Your IT Company. Powered by open standards and honest tech.</p>
     </div>
   </footer>
-
 </body>
+</html>
 </html>
 
