--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       <div class="grid">
         <div>
           <h3>Network Setup</h3>
-          <p>From UniFi mesh Wi-Fi to TP-Link routers, we install and configure fast, secure, and reliable networks for your space. Ideal for both homes and small offices.</p>
+          <p>From UniFi networks to TP-Link systems, we install and configure fast, secure, and reliable networks for your space. Ideal for both homes and small offices.</p>
         </div>
         <div>
           <h3>PBX Telephony</h3>
-          <p>We install and configure Asterisk- or FreePBX-based phone systems, allowing internal extensions, call forwarding, IVRs, voicemail-to-email, and more.</p>
+          <p>We install and configure Asterisk-based or Freeswitch-based phone systems, allowing internal extensions, call forwarding, IVRs, voicemail-to-email, and more.</p>
         </div>
         <div>
           <h3>Starlink Integration</h3>
           <p>We professionally install Starlink equipment and optimize placement, including custom pole mounts or wall brackets when necessary. Perfect for rural areas.</p>
         </div>
         <div>
-          <h3>Servers & NAS</h3>
-          <p>Deploy Proxmox, TrueNAS, or Synology setups to enable backups, shared folders, and local cloud storage. Great for collaborative teams and home labs.</p>
+          <h3>Servers, NAS & Software</h3>
+          <p>Deploy Proxmox, TrueNAS, or pre-built NAS setups to enable backups, shared folders, and local cloud storage. We also work with Nextcloud and Paperless-ng for document and file accessibility, great for collaborative teams.  </p>
         </div>
         <div>
           <h3>Ticketing Systems</h3>
@@ -54,7 +54,7 @@
         </div>
         <div>
           <h3>Live Chat & Websites</h3>
-          <p>We integrate live chat tools like LiveKit or Rocket.Chat into your website and offer simple, effective site hosting using GitHub Pages, WordPress, or static HTML.</p>
+          <p>We integrate live chat tools like Chatwoot into your website and offer simple, effective site hosting using GitHub Pages, WordPress, or static HTML.</p>
         </div>
       </div>
     </div>
