--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
       <p>Want to get started? Just send us an email and tell us what you need—we'll take care of the rest.</p>
     </div>
   </section>
+   <script>
+  (function(d,t) {
+    var BASE_URL="https://chat.unifiedberets.com";
+    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=BASE_URL+"/packs/js/sdk.js";
+    g.defer = true;
+    g.async = true;
+    s.parentNode.insertBefore(g,s);
+    g.onload=function(){
+      window.chatwootSDK.run({
+        websiteToken: 'BENENHB1oK4wtBakeAsedE5B',
+        baseUrl: BASE_URL
+      })
+    }
+  })(document,"script");
+</script>
 
   <footer>
     <div class="container">
