--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <p>📧 Email: <a href="mailto:info@yourcompany.com">info@yourcompany.com</a></p>
       <p>📞 Phone: +351 XXX XXX XXX</p>
       <p>Want to get started? Just send us an email and tell us what you need—we'll take care of the rest.</p>
-      <p>Already a client and need assistance? Open a <a href="https://ticket.unifiedberets.com/">ticket</a></p>
+      <p>Already a client and need assistance? Open a <a href="https://ticket.unifiedberets.com/" target="_blank" rel="noopener noreferrer">ticket</a></p>
     </div>
   </section>
    <script>
