--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <h2>Reliable Tech for Real Needs</h2>
       <p>We help homes and businesses get online and stay connected using tools like UniFi, TP-Link, Starlink, and more. Think of us as your all-in-one tech partner.</p>
-      <a href="#contact" class="cta-button">Request a Consultation</a>
+      <a href="https://form.unifiedberets.com/s/cmapi10il000ro801hss21c5n" target="_blank" rel="noopener noreferrer" class="cta-button">Request a Consultation</a>
     </div>
   </section>
 
